
config("GNUStepGUI_WASM_config") {
    defines = [
        "NOMINMAX",
        "BUILDING_GNUSTEP_GUI",
        "GNUSTEP_NO_MULTI_THREAD",
        "GNUSTEP_BASE_INTERNAL" # as the linking is static until we figured out how to make wasm work with shared libraries.
    ]
    include_dirs = [
        ".",
        "Source",
        "Headers",
        "Headers/Additions",
        #"Headers/Additions/GNUstepGUI"
    ]
    lib_dirs = [
        "Headers/AppKit",
        "Headers/Cocoa",
        "Headers/Additions/GNUstepGUI",
        "//libs-base/Headers"
    ]
}

common_src = [

    
    "Source/NSAccessibility.m",
    "Source/NSAccessibilityCustomAction.m",
    "Source/NSAccessibilityCustomRotor.m",
    "Source/NSAccessibilityElement.m",
    "Source/NSActionCell.m",
    "Source/NSAffineTransform.m",
    "Source/NSAlert.m",
    "Source/NSAnimation.m",
    "Source/NSAnimationContext.m",
    "Source/NSAppearance.m",
    "Source/wasm/NSApplication.m",
    "Source/NSArrayController.m",
    "Source/NSAttributedString.m",
    "Source/NSBezierPath.m",
    "Source/NSBitmapImageRep.m",
    "Source/NSBitmapImageRep+GIF.m",
    "Source/NSBitmapImageRep+ICNS.m",
    "Source/NSBitmapImageRep+JPEG.m",
    "Source/NSBitmapImageRep+PNG.m",
    "Source/NSBitmapImageRep+PNM.m",
    "Source/NSBox.m",
    "Source/NSBrowser.m",
    "Source/NSBrowserCell.m",
    "Source/NSBundleAdditions.m",
    "Source/NSButton.m",
    "Source/NSButtonTouchBarItem.m",
    "Source/NSButtonCell.m",
    #"Source/NSButtonImageSource.m",
    "Source/NSCachedImageRep.m",
    "Source/NSCandidateListTouchBarItem.m",
    "Source/NSCell.m",
    "Source/NSCIImageRep.m",
    "Source/NSClipView.m",
    "Source/NSClickGestureRecognizer.m",
    "Source/NSCollectionView.m",
    "Source/NSCollectionViewItem.m",
    "Source/NSColor.m",
    "Source/NSColorList.m",
    "Source/NSColorPanel.m",
    "Source/NSColorPicker.m",
    "Source/NSColorPickerTouchBarItem.m",
    "Source/NSColorSampler.m",
    "Source/NSColorSpace.m",
    "Source/NSColorWell.m",
    "Source/NSComboBox.m",
    "Source/NSComboBoxCell.m",
    "Source/NSControl.m",
    "Source/NSController.m",
    "Source/NSCursor.m",
    "Source/NSCustomImageRep.m",
    "Source/NSCustomTouchBarItem.m",
    "Source/NSDataAsset.m",
    "Source/NSDataLink.m",
    "Source/NSDataLinkManager.m",
    "Source/NSDataLinkPanel.m",
    "Source/NSDatePicker.m",
    "Source/NSDatePickerCell.m",
    "Source/NSDockTile.m",
    "Source/NSDocument.m",
    "Source/NSDocumentController.m",
    "Source/NSDrawer.m",
    "Source/NSEPSImageRep.m",
    "Source/NSEvent.m",
    "Source/NSFileWrapperExtensions.m",
    "Source/NSFont.m",
    "Source/NSFontAssetRequest.m",
    "Source/NSFontDescriptor.m",
    "Source/NSFontCollection.m",
    "Source/NSFontManager.m",
    "Source/NSFontPanel.m",
    "Source/NSForm.m",
    "Source/NSFormCell.m",
    "Source/NSGridView.m",
    "Source/NSGestureRecognizer.m",
    "Source/NSGroupTouchBarItem.m",
    "Source/NSMagnificationGestureRecognizer.m",
    "Source/NSPanGestureRecognizer.m",
    "Source/NSGlyphGenerator.m",
    "Source/NSGlyphInfo.m",
    "Source/NSGradient.m",
    "Source/NSGraphicsContext.m",
    "Source/NSHelpManager.m",
    "Source/NSHelpPanel.m",
    "Source/NSImage.m",
    "Source/NSImageCell.m",
    "Source/NSImageRep.m",
    "Source/NSImageView.m",
    "Source/NSInputManager.m",
    "Source/NSInputServer.m",
    "Source/NSInterfaceStyle.m",
    "Source/NSKeyValueBinding.m",
    "Source/NSLayoutAnchor.m",
    "Source/NSLayoutConstraint.m",
    "Source/NSLayoutGuide.m",
    "Source/NSLayoutManager.m",
    "Source/NSLevelIndicator.m",
    "Source/NSLevelIndicatorCell.m",
    "Source/NSMatrix.m",
    "Source/NSMediaLibraryBrowserController.m",
    "Source/NSMenu.m",
    "Source/NSMenuItem.m",
    "Source/NSMenuItemCell.m",
    "Source/NSMenuView.m",
    "Source/NSMovie.m",
    "Source/NSMovieView.m",
    "Source/NSNib.m",
    "Source/NSNibConnector.m",
    "Source/NSNibControlConnector.m",
    "Source/NSNibOutletConnector.m",
    "Source/NSNibBindingConnector.m",
    "Source/NSNibAXAttributeConnector.m",
    "Source/NSNibAXRelationshipConnector.m",
    "Source/NSObjectController.m",
    "Source/NSOpenGLContext.m",
    "Source/NSOpenGLPixelFormat.m",
    "Source/NSOpenGLView.m",
    "Source/NSOpenPanel.m",
    "Source/NSOutlineView.m",
    "Source/NSPageLayout.m",
    "Source/NSPanel.m",
    "Source/NSParagraphStyle.m",
    "Source/wasm/NSPasteboard.m",
    "Source/NSPasteboardItem.m",
    "Source/NSPopover.m",
    "Source/NSPopUpButton.m",
    "Source/NSPopUpButtonCell.m",
    "Source/NSPathCell.m",
    "Source/NSPathComponentCell.m",
    "Source/NSPathControl.m",
    "Source/NSPathControlItem.m",
    "Source/NSPDFInfo.m",
    "Source/NSPDFImageRep.m",
    "Source/NSPDFPanel.m",
    "Source/NSPersistentDocument.m",
    "Source/NSPickerTouchBarItem.m",
    "Source/NSPICTImageRep.m",
    "Source/NSPopoverTouchBarItem.m",
    "Source/NSPressGestureRecognizer.m",
    "Source/NSPredicateEditor.m",
    "Source/NSPredicateEditorRowTemplate.m",
    "Source/NSPrinter.m",
    "Source/NSPrintInfo.m",
    "Source/NSPrintOperation.m",
    "Source/NSPrintPanel.m",
    "Source/NSProgressIndicator.m",
    "Source/NSResponder.m",
    "Source/NSRotationGestureRecognizer.m",
    "Source/NSRuleEditor.m",
    "Source/NSRulerMarker.m",
    "Source/NSRulerView.m",
    "Source/NSRunningApplication.m",
    "Source/NSSavePanel.m",
    "Source/NSScreen.m",
    "Source/NSScroller.m",
    "Source/NSScrollView.m",
    "Source/NSSearchField.m",
    "Source/NSSearchFieldCell.m",
    "Source/NSSecureTextField.m",
    "Source/NSSegmentedCell.m",
    "Source/NSSegmentedControl.m",
    "Source/NSSelection.m",
    "Source/NSShadow.m",
    "Source/NSSharingService.m",
    "Source/NSSharingServicePickerToolbarItem.m",
    "Source/NSSharingServicePickerTouchBarItem.m",
    "Source/NSSlider.m",
    "Source/NSSliderCell.m",
    "Source/NSSliderAccessory.m",
    "Source/NSSliderTouchBarItem.m",
    "Source/NSSound.m",
    "Source/NSSpeechRecognizer.m",
    "Source/NSSpeechSynthesizer.m",
    "Source/NSSpellChecker.m",
    "Source/NSSplitView.m",
    "Source/NSSplitViewController.m",
    "Source/NSSplitViewItem.m",
    "Source/NSStackView.m",
    "Source/NSStatusBar.m",
    "Source/NSStatusBarButton.m",
    "Source/NSStatusItem.m",
    "Source/NSStepper.m",
    "Source/NSStepperCell.m",
    "Source/NSStepperTouchBarItem.m",
    "Source/NSStoryboard.m",
    "Source/NSStoryboardSegue.m",
    "Source/NSStringDrawing.m",
    "Source/NSSwitch.m",
    "Source/NSTableColumn.m",
    "Source/NSTableHeaderCell.m",
    "Source/NSTableHeaderView.m",
    "Source/NSTableView.m",
    "Source/NSTabView.m",
    "Source/NSTabViewController.m",
    "Source/NSTabViewItem.m",
    "Source/NSText.m",
    "Source/NSTextAlternatives.m",
    "Source/NSTextAttachment.m",
    "Source/NSTextBlock.m",
    "Source/NSTextContainer.m",
    "Source/NSTextCheckingController.m",
    "Source/NSTextField.m",
    "Source/NSTextFieldCell.m",
    "Source/NSTextFinder.m",
    "Source/NSTextInputContext.m",
    "Source/NSTextList.m",
    "Source/NSTextStorage.m",
    "Source/NSTextTable.m",
    "Source/NSTextTableBlock.m",
    "Source/NSTextView.m",
    "Source/NSTextView_actions.m",
    "Source/NSTitlebarAccessoryViewController.m",
    "Source/NSToolbar.m",
    "Source/NSToolbarItem.m",
    "Source/NSToolbarItemGroup.m",
    "Source/NSTokenField.m",
    "Source/NSTokenFieldCell.m",
    "Source/NSTouch.m",
    "Source/NSTouchBar.m",
    "Source/NSTouchBarItem.m",
    "Source/NSTrackingArea.m",
    "Source/NSTreeController.m",
    "Source/NSTreeNode.m",
    "Source/NSUserDefaultsController.m",
    "Source/NSUserInterfaceCompression.m",
    "Source/NSUserInterfaceItemSearching.m",
    "Source/NSView.m",
    "Source/NSViewController.m",
    "Source/NSVisualEffectView.m",
    "Source/NSWindow.m",
    "Source/NSWindowController.m",
    "Source/NSWorkspace.m",
    "Source/tiff.m",
    "Source/linking.m",
    "Source/externs.m",
    "Source/Functions.m",
    "Source/GSAnimator.m",
    "Source/GSAutocompleteWindow.m",
    "Source/GSCharacterPanel.m",
    "Source/wasm/GSDisplayServer.m",
    "Source/GSDragView.m",
    "Source/GSEPSPrintOperation.m",
    "Source/GSFontInfo.m",
    "Source/GSGhostscriptImageRep.m",
    "Source/GSGModelLoader.m",
    "Source/GSGormLoader.m",
    "Source/GSGormLoading.m",
    "Source/GSHbox.m",
    "Source/GSHelpAttachment.m",
    "Source/GSHelpManagerPanel.m",
    "Source/GSHorizontalTypesetter.m",
    "Source/GSIconManager.m",
    "Source/GSImageMagickImageRep.m",
    "Source/GSInfoPanel.m",
    "Source/GSKeyBindingAction.m",
    "Source/GSKeyBindingTable.m",
    "Source/GSLayoutManager.m",
    "Source/GSModelLoaderFactory.m",
    "Source/GSNibLoader.m",
    "Source/GSNibLoading.m",
    "Source/GSPDFPrintOperation.m",
    "Source/GSPrinting.m",
    "Source/GSPrintOperation.m",
    "Source/GSServicesManager.m",
    "Source/GSSlideView.m",
    "Source/GSStandardWindowDecorationView.m",
    "Source/GSWindowDecorationView.m",
    "Source/GSStoryboardTransform.m",
    "Source/GSTable.m",
    "Source/GSTextFinder.m",
    "Source/GSTextStorage.m",
    "Source/GSTheme.m",
    "Source/GSThemeDrawing.m",
    "Source/GSThemeInspector.m",
    "Source/GSThemeMenu.m",
    "Source/GSThemeOpenSavePanels.m",
    "Source/GSThemePanel.m",
    "Source/GSThemePrintPanels.m",
    "Source/GSThemeTools.m",
    "Source/GSThemeWindow.m",
    "Source/GSTitleView.m",
    "Source/GSToolbarCustomizationPalette.m",
    "Source/GSToolbarView.m",
    "Source/GSToolTips.m",
    "Source/GSTrackingRect.m",
    "Source/GSTypesetter.m",
    "Source/GSVbox.m",
    "Source/GSXibElement.m",
    "Source/GSXibLoader.m",
    "Source/GSXibLoading.m",
    "Source/GSXibKeyedUnarchiver.m",
    "Source/GSXib5KeyedUnarchiver.m",

    "Source/wasm-entry.m",
    "Source/wasm/wasm-Appkit.m"
]

config("lib_gui_config_public") {
    include_dirs = [
        "Headers",
        "Headers/Additions",
        "Source"
    ]
}


static_library("GNUSTEP_GUI_STATIC_LIB") {
    sources = common_src
    configs += [
        ":GNUStepGUI_WASM_config",
        #"//objc4:objc4_public_headers",
        "//libobjc2:libGnuObjc2_public_headers"
    ]
    public_configs = [
        ":lib_gui_config_public",
        "//libs-base:GNUSTEP_LIB_BASE_PUBLIC_HEADERS"
    ]
    deps = [
        "//libs-base:GNUSTEP_BASE",
        "//libs-back:GNUSTEP_BACK_LIB",
        "//3rdparty/libtiff:libtiff",
    ]

    if (is_debug == true) {
        sources += [
            "Source/GSMemoryPanel.m", # requires NDEBUG to be undefined.  
        ]
    }
}

#shared_library("GNUSTEP_GUI_DYLIB") {}
